--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Cocktail</string>
     <string name="name_app">Cocktails Asf</string>
     <string name="explore">EXPLORE !!!!!</string>
+    <string name="search">Search Cocktail</string>
+    <string name="btn_search_name">Search by name</string>
 </resources>
