--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="explore">EXPLORE !!!!!</string>
     <string name="search">Search Cocktail</string>
     <string name="btn_search_name">Search by name</string>
+    <string name="btn_search_ingredient">Search by ingredient...</string>
 </resources>
